# Cojac

./: .classpath  .gitignore  .gitlab-ci.yml  .project  ISSUES.txt  README.md  README_COJAC.txt  cojac_index.txt  internal-notes.txt  pom.xml
.run/: HelloAutodiffForward.run.xml  HelloAutodiffReverse.run.xml  HelloBigDecimal -Rb50.run.xml  HelloBigDecimal without-Cojac.run.xml  HelloChebfun symb.run.xml  HelloChebfun.run.xml  HelloComplexNumber -Rc strict.run.xml  HelloComplexNumber -Rc.run.xml  HelloComplexNumber.run.xml  HelloComplexNumber2 -Rc strict.run.xml  (+15 more)
cojac/: pom.xml  (+3 more)
src/main/resources/native-libraries/posits/src/: CMakeLists.txt  README.md
src/main/resources/native-libraries/posits/src/include/: com_github_cojac_utils_Posit32Utils.h
src/main/resources/native-libraries/posits/src/libraries/SoftPosit/: .cproject  .project  CHANGELOG  README.md
src/main/resources/native-libraries/posits/src/libraries/SoftPosit/python/: softposit.py  softposit_python.i  softposit_python_wrap.c
src/main/resources/native-libraries/posits/src/libraries/SoftPosit/source/: c_convertQuire16ToPosit16.c  p16_mul.c  p32_mul.c  p8_mul.c  pX1_roundToInt.c  pX2_roundToInt.c  quire16_fdp_add.c  quire_helper.c  s_addMagsP16.c  s_addMagsP32.c  s_addMagsP8.c  s_addMagsPX1.c  s_addMagsPX2.c  s_mulAddPX1.c  s_subMagsP16.c  s_subMagsP32.c  s_subMagsP8.c  s_subMagsPX1.c  s_subMagsPX2.c
src/main/resources/native-libraries/posits/src/libraries/SoftPosit/source/include/: softposit.h  softposit_types.h
src/main/resources/native-libraries/posits/src/src/: com_github_cojac_utils_Posit32Utils.c
(+737 files in other folders)
